Self_Paced_Exercices/Traffic_Management/Traffic_Mirroring/src/Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: generic
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingress
    app.kubernetes.io/instance: istio-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
